--- a/index.html
+++ b/index.html
@@ -490,9 +490,7 @@
 
         // Daftar Admin (username dan password) - TIDAK AMAN untuk produksi, hanya demo
         const ADMINS = [
-            { username: "admin", password: "admin" }, // Admin default
-            { username: "kasir1", password: "kasir1" }, // Contoh admin kedua
-            { username: "manager", password: "manager" }, // Contoh admin ketiga
+            { username: "reza", password: "reza" }, // Admin defa
 			{ username: "reza", password: "reza" }
             // Anda bisa menambahkan lebih banyak admin di sini
         ];
